# pylops

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  azure-pipelines.yml  environment-dev-arm.yml  environment-dev-gpu.yml  environment-dev-intel-mkl.yml  environment-dev.yml  pyproject.toml  requirements-dev-arm.txt  requirements-dev-gpu.txt  requirements-dev.txt  requirements-doc.txt  requirements-intel-mkl.txt  setup.cfg  setup.py
.github/workflows/: astra.yaml  build-mkl.yaml  build.yaml  buildcupy.yaml  codacy-coverage-reporter.yaml
docs/source/: adding.rst  addingsolver.rst  changelog.rst  conf.py  contributing.rst  credits.rst  faq.rst  gpu.rst  installation.rst
examples/: plot_avo.py  plot_dtcwt.py  plot_fft.py  plot_mri.py  plot_multiproc.py  plot_pwdslope.py  plot_restriction.py  plot_slopeest.py  plot_smoothing3d.py  plot_stacking.py
pylops/: LinearOperator.py  __init__.py  jaxoperator.py  linearoperator.py  pytensoroperator.py  torchoperator.py
pylops/avo/: avo.py  (+2 more)
pytests/: test_basicoperators.py  test_combine.py  test_ct.py  test_derivative.py  test_dwts.py  test_ffts.py  test_fourierradon.py  test_functionoperator.py  test_interpolation.py  test_interpolation_spline.py  test_kirchhoff.py  test_linearoperator.py  test_lsm.py  test_marchenko.py  test_mri.py  test_nonstatconvolve.py  test_oneway.py  test_pad.py  test_patching.py  test_pwd.py  test_radon.py  test_shift.py  test_sliding.py  test_smoothing.py  test_solver.py  test_sparsity.py  test_torchoperator.py  test_waveeqprocessing.py
python_freethread/: README.md  example.py  example_numpy.py  example_numpy_chatgpt.py  example_numpy_chatgpt1.py  example_numpy_chatgpt2.py  pyblockdiag.py  pyhstack.py
tutorials/: ctscan.py  deblending.py  timeshift.py
(+118 files in other folders)
