[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pylops"
description = "Python library implementing linear operators to allow solving large-scale optimization problems"
readme = "README.md"
authors = [
    {name = "Matteo Ravasi", email = "matteoravasi@gmail.com"},
]
license = {file = "LICENSE.md"}
keywords = ["algebra", "inverse problems", "large-scale optimization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "scipy >= 1.11.0",
]
dynamic = ["version"]

[project.optional-dependencies]
advanced = [
    "llvmlite",
    "numba",
    "pyfftw",
    "PyWavelets",
    "scikit-fmm",
    "sympy",
    "spgl1",
    "dtcwt",
    "astra-toolbox; sys_platform != 'darwin'",
]

[tool.setuptools.packages.find]
exclude = ["pytests"]

[tool.setuptools_scm]
version_file = "pylops/version.py"

[dependency-groups]
dev = [
    "torch>=2.10.0",
    "devito",
    "jax>=0.6.2",
    "pytensor>=2.34.0",
    "pytest>=9.0.2",
]
doc = [
    "matplotlib>=3.10.8",
]
